add_subdirectory(bitDescriptor)
add_subdirectory(bubblesort)
add_subdirectory(fibonacci)
add_subdirectory(crc32)
add_subdirectory(matrixAdd)
add_subdirectory(sudokusolver)
add_subdirectory(stencil_vect)
add_subdirectory(towerofhanoi)
add_subdirectory(matrixMul8)
add_subdirectory(matrixMul8_dotp)
add_subdirectory(matrixMul16)
add_subdirectory(matrixMul16_dotp)
add_subdirectory(matrixMul32)
add_subdirectory(motion_detection)
add_subdirectory(convolution)
add_subdirectory(pooling)
add_subdirectory(cnn_layer)
add_subdirectory(stencil)
add_subdirectory(dct)
add_subdirectory(fdct)
add_subdirectory(non_separable_2d_filter)

# region `ram' overflowed by 15978072 bytes, N constant is way too big
#add_subdirectory(fdtd-1d)
# region `ram' overflowed by 3572 bytes
#add_subdirectory(fft)
# region `ram' overflowed by 63978248 bytes, N constant is way too big
#add_subdirectory(jacobi-1d-imper)
# region `ram' overflowed by 63978248 bytes, N constant is way too big
#add_subdirectory(jacobi-2d-imper)
# region `ram' overflowed by 1044 bytes
#add_subdirectory(rijndael)